# TestHppGenerator

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  MyLib.cpp  MyLib.h  MyLib.hpp  QtQmlExample.hpp  Shalom.cpp  Shalom.h  Shalom.hpp  parseHpp.py  templates.txt
lib/FolderB/: folderb.hpp
lib/genHpp/: MyLib.cpp  Shalom.cpp  Shalom.h  mytype.cpp  mytype.h
scripts/: hppTemplates.txt  parseHpp.py  run.sh
